[gd_scene load_steps=7 format=3 uid="uid://bos0proegkktj"]

[ext_resource type="Script" path="res://min.gd" id="1_au4vd"]
[ext_resource type="FontFile" uid="uid://bekx6hqayb3x" path="res://alfont_com_Sp_Mina_p30download.com_.ttf" id="2_k1ltd"]
[ext_resource type="AudioStream" uid="uid://ch2wngqutbjc4" path="res://sound/beyond-video-game-soundtrack-side-scrolling-shooter-arcade-147696.mp3" id="3_i7r0r"]
[ext_resource type="Texture2D" uid="uid://c75mwch1ut2a3" path="res://sound/volume.png" id="4_qqhh1"]
[ext_resource type="Texture2D" uid="uid://bl2jajjuxhy3l" path="res://sound/mute.png" id="5_lypb0"]

[sub_resource type="LabelSettings" id="LabelSettings_uk8qu"]
font = ExtResource("2_k1ltd")
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[node name="min" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_au4vd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 525.0
offset_bottom = 271.0
color = Color(0.221902, 0.221902, 0.221902, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -70.0
offset_right = 56.5
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k1ltd")
theme_override_font_sizes/font_size = 40
text = "العب
"

[node name="Button2" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k1ltd")
theme_override_font_sizes/font_size = 40
text = "اخرج"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 7.0
offset_right = 347.0
offset_bottom = 57.0
text = "مربع ضد دائرة"
label_settings = SubResource("LabelSettings_uk8qu")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 196.0
offset_right = 444.0
offset_bottom = 246.0
text = "فلاش,تيربو,احمد,اريون"
label_settings = SubResource("LabelSettings_uk8qu")

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i7r0r")

[node name="sound" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(0.065, 0.065)
icon = ExtResource("4_qqhh1")
flat = true

[node name="mu" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(0.065, 0.065)
icon = ExtResource("5_lypb0")
flat = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="mu" to="." method="_on_mu_pressed"]
